More work on migrating to angular

--- a/fe2/pubspec.yaml
+++ b/fe2/pubspec.yaml
@@ -15,3 +15,5 @@ transformers:
     - 'package:angular2/common.dart#COMMON_PIPES'
     entry_points: web/main.dart
 - dart_to_js_script_rewriter
+- $dart2js:
+    commandLineOptions: [--show-package-warnings]
